--- a/package.json
+++ b/package.json
@@ -4,6 +4,15 @@
   "description": "A macro nutrients calculator, using the teaches from Caio Bottura's book with the name of Dieta Flexivel",
   "main": "webpack.config.js",
   "dependencies": {
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-plugin-react-html-attrs": "^2.0.0",
+    "babel-plugin-transform-class-properties": "^6.3.13",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
     "eslint-config-rallycoding": "^3.2.0",
     "prop-types": "^15.5.10",
     "react": "^0.14.6",
