--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prop-types": "^15.5.10",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
+    "react-materialize": "^1.0.10",
     "webpack": "^1.12.9"
   },
   "devDependencies": {
