--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "eslint-config-rallycoding": "^3.2.0",
+    "express": "^4.15.4",
     "prop-types": "^15.5.10",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
