--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-materialize": "^1.0.10",
-    "webpack": "^1.12.9"
+    "webpack": "^1.12.9",
+    "yargs": "^8.0.2"
   },
   "devDependencies": {
     "webpack-dev-server": "^1.16.5",
@@ -26,7 +27,7 @@
   },
   "scripts": {
     "start": "node server",
-    "build": "webpack",
+    "build": "webpack -p",
     "dev": "./node_modules/.bin/webpack-dev-server --content-base src --inline --hot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
