--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-materialize": "^1.0.10",
+    "react-redux": "^5.0.6",
+    "redux": "^3.5.2",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^4.4.1",
     "webpack": "^3.5.5",
     "yargs": "^8.0.2"
   },
