--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "webpack-dev-server": "^2.7.1"
   },
   "scripts": {
-    "start": "node server",
+    "start": "node server/start.js",
     "build": "webpack --config webpack.config.prod.js -p",
     "devBuild": "webpack --config webpack.config.js",
     "dev": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --content-base src --inline --hot",
