--- a/package.json
+++ b/package.json
@@ -1,8 +1,24 @@
 {
   "name": "macros-calculator",
-  "version": "2.1.1",
+  "version": "2.0.0-beta.4",
   "description": "A macro nutrients calculator, using the teaches from Caio Bottura's book with the name of Dieta Flexivel",
-  "main": "webpack.config.js",
+	"author": "Matheus Almeida <mat.almeida@live.com>",
+  "homepage": "https://github.com/matAlmeida/calculadora-macros#readme",
+  "keywords": ["calculadora-macros", "macros", "calculator", "macros-calculator", "calculadora macros", "macros calculator", "macronutrients", "macronutrientes"],
+	"scripts": {
+    "start": "node server/start.js",
+    "build": "webpack --config webpack.config.prod.js -p",
+    "devBuild": "webpack --config webpack.config.js",
+    "dev": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --content-base src --inline --hot",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+	"repository": {
+    "type": "git",
+    "url": "https://github.com/matAlmeida/calculadora-macros"
+  },
+  "bugs": {
+    "url": "https://github.com/matAlmeida/calculadora-macros/issues"
+  },
   "dependencies": {
     "express": "^4.15.4",
     "react": "^15.6.1",
@@ -27,13 +43,5 @@
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
   },
-  "scripts": {
-    "start": "node server/start.js",
-    "build": "webpack --config webpack.config.prod.js -p",
-    "devBuild": "webpack --config webpack.config.js",
-    "dev": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --content-base src --inline --hot",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Matheus Almeida",
   "license": "MIT"
 }
