--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,16 @@
 {
-    "extends": "rallycoding",
-    "rules": {
-        "arrow-body-style": 0
-    }
+  "extends": ["prettier", "rallycoding"],
+  "plugins": ["prettier"],
+  "env": {
+    "es6": true
+  },
+  "rules": {
+    "prettier/prettier": "error"
+  },
+  "parserOptions": {
+    "sourceType": "module"
+  },
+  "rules": {
+    "arrow-body-style": 0
+  }
 }
