--- a/package.json
+++ b/package.json
@@ -39,7 +39,11 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "compression-webpack-plugin": "^1.0.0",
+    "eslint": "4.18.2",
+    "eslint-config-prettier": "2.9.0",
     "eslint-config-rallycoding": "^3.2.0",
+    "eslint-plugin-prettier": "2.6.0",
+    "prettier": "1.11.1"
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
   },
