--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "eslint-config-prettier": "2.9.0",
     "eslint-config-rallycoding": "^3.2.0",
     "eslint-plugin-prettier": "2.6.0",
-    "prettier": "1.11.1"
+    "prettier": "1.11.1",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
   },
