--- a/package.json
+++ b/package.json
@@ -1,18 +1,30 @@
 {
   "name": "macros-calculator",
   "version": "2.0.0-beta.4",
-  "description": "A macro nutrients calculator, using the teaches from Caio Bottura's book with the name of Dieta Flexivel",
-	"author": "Matheus Almeida <mat.almeida@live.com>",
+  "description":
+    "A macro nutrients calculator, using the teaches from Caio Bottura's book with the name of Dieta Flexivel",
+  "author": "Matheus Almeida <mat.almeida@live.com>",
   "homepage": "https://github.com/matAlmeida/calculadora-macros#readme",
-  "keywords": ["calculadora-macros", "macros", "calculator", "macros-calculator", "calculadora macros", "macros calculator", "macronutrients", "macronutrientes"],
-	"scripts": {
+  "keywords": [
+    "calculadora-macros",
+    "macros",
+    "calculator",
+    "macros-calculator",
+    "calculadora macros",
+    "macros calculator",
+    "macronutrients",
+    "macronutrientes"
+  ],
+  "scripts": {
+    "lint": "eslint ./src/**/*.js ./server/**/*.js --fix",
     "start": "node server/start.js",
     "build": "webpack --config webpack.config.prod.js -p",
     "devBuild": "webpack --config webpack.config.js",
-    "dev": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --content-base src --inline --hot",
+    "dev":
+      "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --content-base src --inline --hot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-	"repository": {
+  "repository": {
     "type": "git",
     "url": "https://github.com/matAlmeida/calculadora-macros"
   },
