--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "macros-calculator",
-  "version": "2.0.0-beta.4",
+  "version": "2.0.1",
   "description": "A macro nutrients calculator, using the teaches from Caio Bottura's book with the name of Dieta Flexivel",
   "author": "Matheus Almeida <mat.almeida@live.com>",
   "homepage": "https://github.com/matAlmeida/calculadora-macros#readme",
